Scaffold training loop

--- a/notebooks/P-Wave-CNN.ipynb
+++ b/notebooks/P-Wave-CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,43 @@
     "        x = F.relu(self.batchnorm512(x))\n",
     "        \n",
     "        x = self.fc3(x)\n",
-    "        s\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "\n",
+    "traindata = h5py.File(\"../train/scsn_p_2000_2017_6sec_0.5r_pick_train.hdf5\")\n",
+    "testdata = h5py.File(\"../test/scsn_p_2000_2017_6sec_0.5r_pick_test.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "batch_size = 500\n",
+    "\n",
+    "# Load test data\n",
+    "trainset = traindata[\"X\"]\n",
+    "testset = testdata[\"X\"]\n",
+    "# Zip data and ground truth together for dataloader?\n",
+    "\n",
+    "trainloader = DataLoader(trainset, batch_size=batch_size, shuffle=True)\n",
+    "testloader = DataLoader(testset, batch_size=batch_size, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +131,28 @@
     "\n",
     "criterion = nn.BCEWithLogitsLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 10\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    for batch, labels in trainloader:\n",
+    "        # Clear gradients in optimizer\n",
+    "        optimizer.zero_grad()\n",
+    "        # training\n",
+    "    else:\n",
+    "        with torch.no_grad():\n",
+    "            for batch, labels in testloader:\n",
+    "                # validation\n",
+    "                pass\n",
+    "    # Print epoch summary\n",
+    "        "
    ]
   }
  ],
