Add validation. Change criterion to NLLLoss.

--- a/notebooks/P-Wave-CNN.ipynb
+++ b/notebooks/P-Wave-CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "        \n",
     "        self.fc1 = nn.Linear(4736, 512)\n",
     "        self.fc2 = nn.Linear(512, 512)\n",
-    "        self.fc3 = nn.Linear(512, 1)\n",
+    "        self.fc3 = nn.Linear(512, 2)\n",
     "        \n",
     "        self.maxpool = nn.MaxPool1d(kernel_size=2, stride=2)        \n",
     "    def forward(self, x):\n",
@@ -63,7 +63,7 @@
     "        x = self.fc2(x)\n",
     "        x = F.relu(self.batchnorm512(x))\n",
     "        \n",
-    "        x = self.fc3(x)\n",
+    "        x = F.log_softmax(self.fc3(x), dim=1)\n",
     "        return x"
    ]
   },
@@ -76,48 +76,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import h5py\n",
     "\n",
-    "traindata = h5py.File(\"../train/scsn_p_2000_2017_6sec_0.5r_pick_train_mix.hdf5\")\n",
-    "testdata = h5py.File(\"../test/scsn_p_2000_2017_6sec_0.5r_pick_test_mix.hdf5\")"
+    "mixdata = h5py.File(\"../train/scsn_p_2000_2017_6sec_0.5r_pick_train_mix.hdf5\", \"r\")\n",
+    "testdata = h5py.File(\"../test/scsn_p_2000_2017_6sec_0.5r_pick_test_mix.hdf5\", \"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def split_trainset(train_val_data, train_val_labels, ratio):\n",
+    "    train_ratio = ratio\n",
+    "    \n",
+    "    trainsize = int(len(train_val_data) * train_ratio)\n",
+    "    \n",
+    "    trainset = train_val_data[:trainsize]\n",
+    "    trainlabels = train_val_labels[:trainsize]\n",
+    "    \n",
+    "    valset = train_val_data[trainsize:]\n",
+    "    valabels = train_val_labels[trainsize:]\n",
+    "    \n",
+    "    return (trainset, trainlabels), (valset, valabels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
     "batch_size = 250\n",
     "\n",
-    "train_size = 10000\n",
-    "# val_size = train_size *\n",
+    "train_size = 10000 * 2\n",
+    "train_ratio = 0.7\n",
     "test_size = 2000\n",
     "\n",
     "# Load test data\n",
-    "trainset = traindata[\"X\"][:train_size]\n",
-    "trainlabels = traindata[\"pwave\"][:train_size]\n",
+    "train_val_data = mixdata[\"X\"][:train_size]\n",
+    "train_val_labels = mixdata[\"pwave\"][:train_size]\n",
     "\n",
+    "(trainset, trainlabels), (valset, val_labels) = split_trainset(train_val_data, train_val_labels, train_ratio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trainset = list(zip(trainset, trainlabels))\n",
+    "\n",
+    "valset = list(zip(valset, val_labels))\n",
     "\n",
     "testset = testdata[\"X\"][:test_size]\n",
     "testlabels = testdata[\"pwave\"][:test_size]\n",
     "\n",
-    "testset = list(zip(testset, testlabels))\n",
-    "\n",
+    "testset = list(zip(testset, testlabels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trainloader = DataLoader(trainset, batch_size=batch_size, shuffle=True)\n",
+    "val_loader = DataLoader(valset, batch_size=batch_size, shuffle=True)\n",
     "testloader = DataLoader(testset, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,34 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataParallel(\n",
-       "  (module): CNN(\n",
-       "    (conv1): Conv1d(1, 32, kernel_size=(21,), stride=(1,), padding=(10,))\n",
-       "    (conv2): Conv1d(32, 64, kernel_size=(15,), stride=(1,), padding=(7,))\n",
-       "    (conv3): Conv1d(64, 128, kernel_size=(11,), stride=(1,), padding=(5,))\n",
-       "    (batchnorm32): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (batchnorm64): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (batchnorm128): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (batchnorm512): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (fc1): Linear(in_features=4736, out_features=512, bias=True)\n",
-       "    (fc2): Linear(in_features=512, out_features=512, bias=True)\n",
-       "    (fc3): Linear(in_features=512, out_features=1, bias=True)\n",
-       "    (maxpool): MaxPool1d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = parallelize(model)\n",
     "model"
@@ -196,18 +212,18 @@
    "metadata": {},
    "source": [
     "# 4. Define Loss Function and Optimizer\n",
-    "Here we define the loss function and optimizer. For the loss function (criterion), we use the binary cross entropy with logits loss (BCEWithLogitsLoss)"
+    "Here we define the loss function and optimizer. For the loss function (criterion), we use the binary cross entropy with logits loss (BCEWithLogitsLoss). This function applies a sigmoid as well as calculates the cross entropy. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch import optim\n",
     "\n",
-    "criterion = nn.BCEWithLogitsLoss()\n",
+    "criterion = nn.NLLLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)"
    ]
   },
@@ -220,53 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [    1/   30] | train loss: 0.1216 | validation loss: 2.2347\n",
-      "Epoch [    2/   30] | train loss: 0.0525 | validation loss: 2.6065\n",
-      "Epoch [    3/   30] | train loss: 0.0416 | validation loss: 2.7682\n",
-      "Epoch [    4/   30] | train loss: 0.0309 | validation loss: 3.1524\n",
-      "Epoch [    5/   30] | train loss: 0.0250 | validation loss: 3.2717\n",
-      "Epoch [    6/   30] | train loss: 0.0175 | validation loss: 3.5634\n",
-      "Epoch [    7/   30] | train loss: 0.0124 | validation loss: 3.6730\n",
-      "Epoch [    8/   30] | train loss: 0.0140 | validation loss: 4.0407\n",
-      "Epoch [    9/   30] | train loss: 0.0110 | validation loss: 3.8949\n",
-      "Epoch [   10/   30] | train loss: 0.0075 | validation loss: 4.0702\n",
-      "Epoch [   11/   30] | train loss: 0.0041 | validation loss: 4.1698\n",
-      "Epoch [   12/   30] | train loss: 0.0070 | validation loss: 4.2465\n",
-      "Epoch [   13/   30] | train loss: 0.0073 | validation loss: 4.6131\n",
-      "Epoch [   14/   30] | train loss: 0.0068 | validation loss: 4.5385\n",
-      "Epoch [   15/   30] | train loss: 0.0015 | validation loss: 4.6619\n",
-      "Epoch [   16/   30] | train loss: 0.0008 | validation loss: 4.8823\n",
-      "Epoch [   17/   30] | train loss: 0.0008 | validation loss: 4.7758\n",
-      "Epoch [   18/   30] | train loss: 0.0056 | validation loss: 4.3736\n",
-      "Epoch [   19/   30] | train loss: 0.0025 | validation loss: 5.0789\n",
-      "Epoch [   20/   30] | train loss: 0.0028 | validation loss: 5.3408\n",
-      "Epoch [   21/   30] | train loss: 0.0031 | validation loss: 5.1531\n",
-      "Epoch [   22/   30] | train loss: 0.0006 | validation loss: 5.0276\n",
-      "Epoch [   23/   30] | train loss: 0.0002 | validation loss: 5.3013\n",
-      "Epoch [   24/   30] | train loss: 0.0002 | validation loss: 5.5173\n",
-      "Epoch [   25/   30] | train loss: 0.0001 | validation loss: 5.6097\n",
-      "Epoch [   26/   30] | train loss: 0.0001 | validation loss: 5.4957\n",
-      "Epoch [   27/   30] | train loss: 0.0001 | validation loss: 5.5141\n",
-      "Epoch [   28/   30] | train loss: 0.0001 | validation loss: 5.6253\n",
-      "Epoch [   29/   30] | train loss: 0.0001 | validation loss: 5.6270\n",
-      "Epoch [   30/   30] | train loss: 0.0001 | validation loss: 5.5809\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "epochs = 30\n",
+    "%%time\n",
     "\n",
-    "training_losses = []\n",
-    "validation_losses = []\n",
+    "epochs = 10\n",
+    "\n",
+    "train_losses = []\n",
+    "val_losses = []\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
@@ -282,7 +263,7 @@
     "        # Forward pass\n",
     "        output = model.forward(batch.unsqueeze(1))\n",
     "        # Calculate loss\n",
-    "        loss = criterion(output.squeeze(), labels.type(torch.cuda.FloatTensor))\n",
+    "        loss = criterion(output, labels.type(torch.cuda.LongTensor).view(labels.shape, 1))\n",
     "        train_loss += loss.item()\n",
     "        # Backpropagation\n",
     "        loss.backward()\n",
@@ -291,9 +272,9 @@
     "    else:\n",
     "        with torch.no_grad():\n",
     "            model.eval()\n",
-    "            validation_loss = 0\n",
+    "            val_loss = 0\n",
     "\n",
-    "            for batch, labels in testloader:\n",
+    "            for batch, labels in val_loader:\n",
     "                # ============================================\n",
     "                #            VALIDATION\n",
     "                # ============================================\n",
@@ -301,19 +282,45 @@
     "                # Forward pass\n",
     "                ouput = model.forward(batch.unsqueeze(1))\n",
     "                # Calculate loss\n",
-    "                loss = criterion(output.squeeze(), labels.type(torch.cuda.FloatTensor))\n",
-    "                validation_loss += loss.item()\n",
+    "                loss = criterion(output, labels.type(torch.cuda.LongTensor).view(labels.shape, 1))\n",
+    "                val_loss += loss.item()\n",
     "                \n",
     "    # Print epoch summary\n",
     "    t_loss_avg = train_loss / len(trainloader)\n",
-    "    v_loss_avg = validation_loss / len(testloader)\n",
+    "    v_loss_avg = val_loss / len(testloader)\n",
     "    \n",
-    "    training_losses.append(t_loss_avg)\n",
-    "    validation_losses.append(v_loss_avg)\n",
+    "    train_losses.append(t_loss_avg)\n",
+    "    val_losses.append(v_loss_avg)\n",
     "    \n",
     "    print('Epoch [{:5d}/{:5d}] | train loss: {:6.4f} | validation loss: {:6.4f}'.format(\n",
     "            epoch+1, epochs, t_loss_avg, v_loss_avg))\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Testing Model Performance\n",
+    "\n",
+    "For testing model performance, we'll be using scikit learn's metrics library. Scikit learn provides a handful of builtin classfication metrics which we can take advantage of. In order to use them with pytorch, we'll have to move the tensors from GPU to CPU and convert them to numpy arrays. \n",
+    "\n",
+    "1. Classification Report  \n",
+    "    a. Precision  \n",
+    "    b. Recall  \n",
+    "    c. F1 Score\n",
+    "2. Accuracy\n",
+    "2. AUC-ROC\n",
+    "3. AUC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn"
    ]
   },
   {
